@@ -31,6 +31,7 @@ lib/App/Doh/Role/PageLoading.pm
 lib/App/Doh/Role/Preferences.pm
 lib/App/Doh/Role/Templates.pm
 lib/App/Doh/Server.pm
+lib/App/Doh/Session.pm
 lib/App/Doh/User.pm
 lib/App/Doh/View/HTML.pm
 lib/App/Doh/View/HTML/Markdown.pm
